--- a/codegen/protocol/mod.tmpl
+++ b/codegen/protocol/mod.tmpl
@@ -7,9 +7,9 @@ type Packet interface {
     Write(writer io.Writer) (int, error)
 }
 
-// Read switches on the identifier and returns the matching packet
+// ReadFrontend switches on frontend packet identifiers and returns the matching packet
 // DO NOT call this function if the packet in queue does not have an identifier
-func Read(reader io.Reader) (packet Packet, err error) {
+func ReadFrontend(reader io.Reader) (packet Packet, err error) {
     var identifier byte
     identifier, err = ReadByte(reader)
     if err != nil {
@@ -17,7 +17,33 @@ func Read(reader io.Reader) (packet Packet, err error) {
     }
 
     switch identifier {
-        {{range $name, $packet := . -}}
+        {{range $name, $packet := .FrontEnd -}}
+            {{if $packet.Identifier -}}
+                case byte('{{$packet.Identifier}}'):
+                    packet = new({{$name}})
+            {{end -}}
+        {{end -}}
+    }
+
+    err = packet.Read(reader)
+    if err != nil {
+        return
+    }
+
+    return
+}
+
+// ReadBackend switches on backend packet identifier and returns the matching packet
+// DO NOT call this function if the packet in queue does not have an identifier
+func ReadBackend(reader io.Reader) (packet Packet, err error) {
+    var identifier byte
+    identifier, err = ReadByte(reader)
+    if err != nil {
+        return
+    }
+
+    switch identifier {
+        {{range $name, $packet := .BackEnd -}}
             {{if $packet.Identifier -}}
                 case byte('{{$packet.Identifier}}'):
                     packet = new({{$name}})
