--- a/codegen/protocol/mod.tmpl
+++ b/codegen/protocol/mod.tmpl
@@ -1,6 +1,9 @@
 package protocol
 
-import "io"
+import (
+    "io"
+    "errors"
+)
 
 // codegen: modify for debug only
 
@@ -8,6 +11,8 @@ type Packet interface {
     Read(reader io.Reader) error
     Write(writer io.Writer) (int, error)
 }
+
+var NoSuchIdentifier = errors.New("no such packet with identifier in namespace")
 
 // ReadFrontend switches on frontend packet identifiers and returns the matching packet
 // DO NOT call this function if the packet in queue does not have an identifier
@@ -25,6 +30,9 @@ func ReadFrontend(reader io.Reader) (packet Packet, err error) {
                     packet = new({{$name}})
             {{end -}}
         {{end -}}
+        default:
+            err = NoSuchIdentifier
+            return
     }
 
     err = packet.Read(reader)
@@ -51,6 +59,9 @@ func ReadBackend(reader io.Reader) (packet Packet, err error) {
                     packet = new({{$name}})
             {{end -}}
         {{end -}}
+        default:
+            err = NoSuchIdentifier
+            return
     }
 
     err = packet.Read(reader)
