--- a/codegen/protocol/mod.tmpl
+++ b/codegen/protocol/mod.tmpl
@@ -2,7 +2,7 @@ package protocol
 
 import (
     "io"
-    "errors"
+    "fmt"
 )
 
 // codegen: modify for debug only
@@ -11,8 +11,6 @@ type Packet interface {
     Read(reader io.Reader) error
     Write(writer io.Writer) (int, error)
 }
-
-var NoSuchIdentifier = errors.New("no such packet with identifier in namespace")
 
 // ReadFrontend switches on frontend packet identifiers and returns the matching packet
 // DO NOT call this function if the packet in queue does not have an identifier
@@ -31,7 +29,7 @@ func ReadFrontend(reader io.Reader) (packet Packet, err error) {
             {{end -}}
         {{end -}}
         default:
-            err = NoSuchIdentifier
+            err = fmt.Errorf("no such packet with identifier 0x%x in Frontend", identifier)
             return
     }
 
@@ -60,7 +58,7 @@ func ReadBackend(reader io.Reader) (packet Packet, err error) {
             {{end -}}
         {{end -}}
         default:
-            err = NoSuchIdentifier
+            err = fmt.Errorf("no such packet with identifier 0x%x in Backend", identifier)
             return
     }
 
