--- a/hack/packetgen/templates/encode.tmpl
+++ b/hack/packetgen/templates/encode.tmpl
@@ -1,77 +1,88 @@
 {{$name := index . 0 -}}
-{{$value := index . 1 -}}
+{{$pointer := index . 1 -}}
+{{$value := index . 2 -}}
 
 {{if some $value.Map -}}
-	err = {{$name}}.WriteTo(encoder)
+    {{$ifaceName := printf "%s%s" $name $value.Map.Name -}}
+
+    {{$prefixPointer := printf "%s.%s()" $pointer $ifaceName -}}
+
+	{{template "encode" (list $name $prefixPointer $value.Map.Prefix)}}
+
+	err = {{$pointer}}.WriteTo(encoder)
 	if err != nil {
 		return
 	}
 {{else if some $value.Remaining -}}
-	{{$itemName := temp -}}
+	{{$itemPointer := temp -}}
 
-	for _, {{$itemName}} := range {{$name}} {
-		{{template "encode" (list $itemName $value.Remaining)}}
+	for _, {{$itemPointer}} := range {{$pointer}} {
+		{{template "encode" (list $name $itemPointer $value.Remaining)}}
 	}
 {{else if some $value.Basic -}}
-	err = encoder.{{upperCamel $value.Basic}}({{$value.Basic}}({{$name}}))
+	err = encoder.{{upperCamel $value.Basic}}({{$value.Basic}}({{$pointer}}))
 	if err != nil {
 		return
 	}
 {{else if some $value.Array -}}
-	{{$itemName := temp -}}
+	{{$itemPointer := temp -}}
 
-	for _, {{$itemName}} := range {{$name}} {
-		{{template "encode" (list $itemName $value.Array)}}
+	for _, {{$itemPointer}} := range {{$pointer}} {
+		{{template "encode" (list $name $itemPointer $value.Array)}}
 	}
 {{else if some $value.Struct -}}
-	{{range $field := $value.Struct.Fields -}}
-		{{$fieldName := printf "%s.%s" $name $field.Name -}}
+    {{$structName := printf "%s%s" $name $value.Struct.Name -}}
 
-		{{template "encode" (list $fieldName $field)}}
+    {{range $field := $value.Struct.Fields -}}
+		{{$fieldPointer := printf "%s.%s" $pointer $field.Name -}}
+
+		{{template "encode" (list $structName $fieldPointer $field)}}
 	{{end -}}
 {{else if some $value.LengthPrefixedSlice -}}
-	{{$lengthName := temp -}}
+	{{$lengthPointer := temp -}}
 
-	{{$lengthName}} := {{template "type" (list "" $value.LengthPrefixedSlice.Prefix)}}(len({{$name}}))
+	{{$lengthPointer}} := {{template "type" (list $name $value.LengthPrefixedSlice.Prefix)}}(len({{$pointer}}))
 
-	{{template "encode" (list $lengthName $value.LengthPrefixedSlice.Prefix)}}
+	{{template "encode" (list $name $lengthPointer $value.LengthPrefixedSlice.Prefix)}}
 
-	{{$itemName := temp -}}
+	{{$itemPointer := temp -}}
 
-	for _, {{$itemName}} := range {{$name}} {
-		{{template "encode" (list $itemName $value.LengthPrefixedSlice)}}
+	for _, {{$itemPointer}} := range {{$pointer}} {
+		{{template "encode" (list $name $itemPointer $value.LengthPrefixedSlice)}}
 	}
 {{else if some $value.NullableLengthPrefixedSlice -}}
-    {{$lengthName := temp -}}
+    {{$lengthPointer := temp -}}
 
-    {{$lengthName}} := {{template "type" (list "" $value.NullableLengthPrefixedSlice.Prefix)}}(len({{$name}}))
+    {{$lengthPointer}} := {{template "type" (list $name $value.NullableLengthPrefixedSlice.Prefix)}}(len({{$pointer}}))
 
-	if {{$name}} == nil {
-		{{$lengthName}} = -1
+	if {{$pointer}} == nil {
+		{{$lengthPointer}} = -1
 	}
 
-    {{template "encode" (list $lengthName $value.NullableLengthPrefixedSlice.Prefix)}}
+    {{template "encode" (list $name $lengthPointer $value.NullableLengthPrefixedSlice.Prefix)}}
 
-    {{$itemName := temp -}}
+    {{$itemPointer := temp -}}
 
-	for _, {{$itemName}} := range {{$name}} {
-    	{{template "encode" (list $itemName $value.NullableLengthPrefixedSlice)}}
+	for _, {{$itemPointer}} := range {{$pointer}} {
+    	{{template "encode" (list $name $itemPointer $value.NullableLengthPrefixedSlice)}}
 	}
 {{else if some $value.ZeroByteTerminatedSlice -}}
-	{{$itemName := temp -}}
+    {{$structName := printf "%s%s" $name $value.ZeroByteTerminatedSlice.Name -}}
 
-	for _, {{$itemName}} := range {{$name}} {
-		{{$keyName := printf "%s.%s" $itemName $value.ZeroByteTerminatedSlice.KeyName -}}
+    {{$itemPointer := temp -}}
 
-		err = encoder.Uint8({{$keyName}})
+	for _, {{$itemPointer}} := range {{$pointer}} {
+		{{$keyPointer := printf "%s.%s" $itemPointer $value.ZeroByteTerminatedSlice.KeyName -}}
+
+		err = encoder.Uint8({{$keyPointer}})
 		if err != nil {
 			return
 		}
 
 		{{range $field := $value.ZeroByteTerminatedSlice.Fields -}}
-			{{$fieldName := printf "%s.%s" $itemName $field.Name -}}
+			{{$fieldPointer := printf "%s.%s" $itemPointer $field.Name -}}
 
-			{{template "encode" (list $fieldName $field)}}
+			{{template "encode" (list $structName $fieldPointer $field)}}
 		{{end -}}
 	}
 
@@ -80,15 +91,15 @@
 		return
 	}
 {{else if some $value.ZeroTerminatedSlice -}}
-	{{$itemName := temp -}}
+	{{$itemPointer := temp -}}
 
-	for _, {{$itemName}} := range {{$name}} {
-    	{{template "encode" (list $itemName $value.ZeroTerminatedSlice)}}
+	for _, {{$itemPointer}} := range {{$pointer}} {
+    	{{template "encode" (list $name $itemPointer $value.ZeroTerminatedSlice)}}
 	}
 
-	{{$doneName := temp -}}
+	{{$donePointer := temp -}}
 
-	var {{$doneName}} {{template "type" (list "" $value.ZeroTerminatedSlice)}}
+	var {{$donePointer}} {{template "type" (list $name $value.ZeroTerminatedSlice)}}
 
-	{{template "encode" (list $doneName $value.ZeroTerminatedSlice)}}
+	{{template "encode" (list $name $donePointer $value.ZeroTerminatedSlice)}}
 {{end -}}
