--- a/hack/packetgen/templates/decode.tmpl
+++ b/hack/packetgen/templates/decode.tmpl
@@ -85,7 +85,11 @@
 	if {{$lengthPointer}} == -1 {
 		{{$pointer}} = nil
 	} else {
-		{{$pointer}} = slices.Resize({{$pointer}}, int({{$lengthPointer}}))
+		if {{$pointer}} == nil {
+			{{$pointer}} = make([]{{template "type" (list $name $value.NullableLengthPrefixedSlice)}}, 0, int({{$lengthPointer}}))
+		} else {
+			{{$pointer}} = slices.Resize({{$pointer}}, int({{$lengthPointer}}))
+		}
 
 		{{$indexPointer := temp -}}
 
