change Packet interface to force implementation of fmt.Stringer, and add TypeName() string add TypeName() and Stringer implementation for each packet type update PendingPacket to implement TypeName and fmt.Stringer

--- a/hack/packetgen/templates/packets.tmpl
+++ b/hack/packetgen/templates/packets.tmpl
@@ -39,6 +39,14 @@ const (
 		return
 	}
 
+	func (T *{{$name}}) TypeName() string {
+	    return "{{$name}}"
+	}
+
+	func (T *{{$name}}) String() string {
+	    return T.TypeName()
+	}
+
 	func (T *{{$name}}) ReadFrom(decoder *fed.Decoder) (err error) {
 		if decoder.Type() != T.Type() {
 			return ErrUnexpectedPacket
